# shakuntala-devi-trainer

./: Cargo.toml  README.md  shakuntala-devi-trainer.html
.cargo/: config.toml
.github/workflows/: rust.yml
src/: cli.rs  gui.rs  lib.rs  main.rs
src/gui/: app.rs  common.rs  style.rs  theme.rs  widget.rs
